@@ -44,8 +44,7 @@
 <a href=Sound.html>Sound</a> || 
 <a href=Surface.html>Surface</a> ||<br>
 &nbsp;<br>|| <a href=pygame_cursors.html>cursors</a> || 
-<a href=pygame_sprite.html>sprite</a> || 
-<a href=pygame_version.html>version</a> ||<br>
+<a href=pygame_sprite.html>sprite</a> ||<br>
 
 
 </td></tr></table></td></tr></table>
